test/conformance/chainsaw/generate/validation/policy/cloneList/chainsaw-step-01-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: target-scope-validation-fail-ns
