test/conformance/chainsaw/generate/validation/policy/cloneList/policy-pass.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: target-scope-validation-pass-1
  namespace: target-scope-validation-fail-ns
spec:
  rules:
  - name: clone-multiple-basic-create-policy-rule
    match:
      any:
      - resources:
          kinds:
          - ServiceAccount
    generate:
      namespace: target-scope-validation-fail-ns
      synchronize: true
      cloneList:
        namespace: target-scope-validation-fail-ns
        kinds:
          - v1/Secret
        selector:
          matchLabels:
            allowedToBeCloned: "true"
---
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: target-scope-validation-pass-2
  namespace: target-scope-validation-fail-ns
spec:
  rules:
  - name: clone-multiple-basic-create-policy-rule
    match:
      any:
      - resources:
          kinds:
          - ServiceAccount
    generate:
      namespace: target-scope-validation-fail-ns
      synchronize: true
      cloneList:
        namespace: target-scope-validation-fail-ns
        kinds:
          - v1/Secret
        selector:
          matchLabels:
            allowedToBeCloned: "true"
---
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: target-scope-validation-pass-3
  namespace: target-scope-validation-fail-ns
spec:
  rules:
  - name: sync-secret
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      generateExisting: false
      namespace: target-scope-validation-fail-ns
      synchronize : true
      cloneList:
        namespace: target-scope-validation-fail-ns
        kinds:
          - v1/Secret
          - v1/ConfigMap
        selector:
          matchLabels:
            allowedToBeCloned: "true"
