test/conformance/chainsaw/generate/validation/policy/cloneList/02-check.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: check
spec:
  timeouts: {}
  try:
  - apply:
      file: policy-pass.yaml
  - apply:
      check:
        (error != null): true
      file: policy-fail-1.yaml
  - apply:
      check:
        (error != null): true
      file: policy-fail-2.yaml
  - apply:
      check:
        (error != null): true
      file: policy-fail-3.yaml
